crates/keron-lang/tests/corpus/errors/check/fn_body_below_outer_val.keron
fn f(): Int {
  later + 1
}

val later: Int = 10
